test/corpus/basics.txt
================================================================================
Hello World
================================================================================

@include std::io

fun main(): int {
    "Hello, World !".println();
    return 0;
}

--------------------------------------------------------------------------------

(source_file
  (include_decl
    path: (identifier))
  (fun_def
    name: (identifier)
    return_type: (named_type
      (identifier))
    body: (block
      (expr_stmt
        (method_call_expr
          object: (str_lit)
          method: (identifier)))
      (return_stmt
        (int_lit)))))

================================================================================
Let Declaration
================================================================================

fun main(): int {
    let x: int => 5;
    return x;
}

--------------------------------------------------------------------------------

(source_file
  (fun_def
    name: (identifier)
    return_type: (named_type
      (identifier))
    body: (block
      (let_decl
        pat: (identifier)
        ty: (named_type
          (identifier))
        value: (int_lit))
      (return_stmt
        (identifier)))))

================================================================================
For Loop
================================================================================

fun main(): int {
    for i in 0..150 {
        i;
    }
    return 0;
}

--------------------------------------------------------------------------------

(source_file
  (fun_def
    name: (identifier)
    return_type: (named_type
      (identifier))
    body: (block
      (for_stmt
        element: (identifier)
        iterator: (range_expr
          from: (int_lit)
          to: (int_lit))
        body: (block
          (expr_stmt
            (identifier))))
      (return_stmt
        (int_lit)))))

================================================================================
Struct Definition
================================================================================

struct Ref<T> {
    inner: *InnerRef<T>;
}

--------------------------------------------------------------------------------

(source_file
  (struct_def
    name: (identifier)
    (template_param
      name: (identifier))
    (struct_field
      name: (identifier)
      ty: (pointer_type
        (named_type
          (identifier)
          (named_type
            (identifier)))))))

================================================================================
Impl Block
================================================================================

impl <T> Clone for Ref<T> {
    fun clone(self: *Ref<T>): Ref<T> {
        return Ref { .inner: self };
    }
}

--------------------------------------------------------------------------------

(source_file
  (impl_block
    (template_param
      name: (identifier))
    interface: (named_type
      (identifier))
    implemented: (named_type
      (identifier)
      (named_type
        (identifier)))
    (fun_def
      name: (identifier)
      (fun_param
        name: (identifier)
        ty: (pointer_type
          (named_type
            (identifier)
            (named_type
              (identifier)))))
      return_type: (named_type
        (identifier)
        (named_type
          (identifier)))
      body: (block
        (return_stmt
          (struct_lit
            ty: (named_type
              (identifier))
            (struct_lit_field
              name: (identifier)
              value: (identifier))))))))

================================================================================
Module and Namespace Resolution
================================================================================

mod A {
    mod B {
        fun b_func(): int { return 69; }
    }
}

fun main(): int {
    printf("%d\n", A::B::b_func());
    return 0;
}

--------------------------------------------------------------------------------

(source_file
  (module_decl
    name: (identifier)
    (module_decl
      name: (identifier)
      (fun_def
        name: (identifier)
        return_type: (named_type
          (identifier))
        body: (block
          (return_stmt
            (int_lit))))))
  (fun_def
    name: (identifier)
    return_type: (named_type
      (identifier))
    body: (block
      (expr_stmt
        (call_expr
          callee: (identifier)
          (str_lit)
          (name_resolved_expr
            (identifier)
            (name_resolved_expr
              (identifier)
              (call_expr
                callee: (identifier))))))
      (return_stmt
        (int_lit)))))
